kubernetes/jsdyb-k8s-001/apps/gateway/envoy/gateway/private-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private-gateway
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: ${SVC_PRIVATE_GATEWAY_ADDR}
  listeners:
    - name: internal-http
      protocol: HTTP
      port: 80
      hostname: '*.${INTERNAL_DOMAIN}'
      allowedRoutes:
        namespaces:
          from: Same
    - name: internal-https
      protocol: HTTPS
      port: 443
      hostname: "*.${INTERNAL_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              networking.kubernetes.io/shared-gateway-access: "true"
      tls:
        certificateRefs:
        - kind: Secret
          name: "wildcard-tls-internal"
