kubernetes/jsdyb-k8s-001/apps/gateway/envoy/gateway/public-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  labels:
    networking.kubernetes.io/public-gateway: "true"
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: ${SVC_PUBLIC_GATEWAY_ADDR}
  listeners:
    - name: external-https
      protocol: HTTPS
      port: 443
      hostname: "*.${EXTERNAL_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              networking.kubernetes.io/shared-gateway-access: "true"
      tls:
        certificateRefs:
        - kind: Secret
          name: "wildcard-tls-external"
    - name: professional-https
      protocol: HTTPS
      port: 443
      hostname: "*.${PROFESSIONAL_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              networking.kubernetes.io/shared-gateway-access: "true"
      tls:
        certificateRefs:
        - kind: Secret
          name: "wildcard-tls-professional"
