kubernetes/jsdyb-k8s-001/apps/gateway/envoy/gateway/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway
      sectionName: internal-http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
